# constrained-optimization-problems

./: CMakeLists.txt  LICENSE  README.md
sample_src/: main.cpp
sample_src/GKLS/: gkls_function.cpp  gkls_function.h  gkls_function.hpp  gkls_random.cpp  gkls_random.h  gkls_random.hpp
sample_src/Grishagin/: grishagin_function.cpp  grishagin_function.h  grishagin_function.hpp
src/: constrained_problem.hpp  problem_generaator.hpp  problem_generator.hpp
